--- a/index.html
+++ b/index.html
@@ -6,38 +6,50 @@
   <title>LÊ THỊ DIỆU XUÂN – Chuyên viên Trồng trọt & Bảo vệ thực vật</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Roboto&display=swap" rel="stylesheet">
   <style>
-    /* Reset & Global */
     * {margin:0; padding:0; box-sizing:border-box;}
     body {font-family:'Roboto', sans-serif; line-height:1.6; color:#333; scroll-behavior:smooth;}
+
     a {text-decoration:none; color:inherit;}
     ul {list-style:none;}
 
-    /* Header */
+    /* Header / Hero Banner */
     header {
-      background: #4CAF50;
-      color: #fff;
-      padding: 80px 20px 40px;
-      text-align: center;
+      background: url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8ZmllbGQtbm9ydGhpY2FsfHx8fHx8MTY5Nzk3MzA1NA&ixlib=rb-4.0.3&q=80&w=1600') center/cover no-repeat fixed;
+      height:100vh;
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      color:white;
+      text-align:center;
     }
-    header h1 {font-family:'Montserrat', sans-serif; font-size:2.5rem; margin-bottom:10px;}
-    header h2 {font-size:1.2rem; margin-bottom:20px; font-weight:500;}
-    header .contact {margin-top:10px;}
-    header .contact a {margin:0 10px; color:#fff;}
+    header h1 {font-family:'Montserrat', sans-serif; font-size:3rem; margin-bottom:10px; text-shadow:2px 2px 5px rgba(0,0,0,0.5);}
+    header h2 {font-size:1.5rem; margin-bottom:20px; font-weight:500; text-shadow:1px 1px 3px rgba(0,0,0,0.5);}
+    header .btn-contact {
+      background:#4CAF50;
+      padding:12px 25px;
+      border-radius:25px;
+      color:white;
+      font-weight:500;
+      transition:0.3s;
+    }
+    header .btn-contact:hover {background:#388E3C;}
 
     /* Navigation */
     nav {
-      position: fixed;
+      position:fixed;
       top:0; left:0; width:100%;
-      background:#fff;
+      background:rgba(255,255,255,0.9);
       border-bottom:1px solid #ddd;
       display:flex; justify-content:center; z-index:999;
+      backdrop-filter: blur(5px);
     }
-    nav ul {display:flex;}
+    nav ul {display:flex; flex-wrap:wrap;}
     nav li {margin:0 15px;}
     nav a {display:block; padding:15px 0; font-weight:500; color:#333;}
     nav a:hover {color:#4CAF50;}
 
-    /* Section */
+    /* Sections */
     section {padding:80px 20px;}
     section h2 {text-align:center; font-family:'Montserrat', sans-serif; font-size:2rem; margin-bottom:40px; color:#4CAF50;}
     .container {max-width:1000px; margin:0 auto;}
@@ -48,10 +60,16 @@
     #about img {flex:1 1 250px; max-width:250px; border-radius:10px;}
     #about .text {flex:2 1 500px;}
 
-    /* Skills & Expertise */
+    /* Expertise / Skills */
     .grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px;}
-    .card {background:#fff; padding:20px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+    .card {background:#fff; padding:20px; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1); transition:0.3s;}
+    .card:hover {transform:translateY(-5px); box-shadow:0 4px 12px rgba(0,0,0,0.2);}
     .card h3 {margin-bottom:15px; color:#4CAF50;}
+
+    /* Portfolio */
+    .portfolio {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px;}
+    .portfolio img {width:100%; border-radius:10px; transition:0.3s;}
+    .portfolio img:hover {transform:scale(1.05);}
 
     /* Timeline */
     .timeline {position:relative; padding-left:30px;}
@@ -77,21 +95,17 @@
   <ul>
     <li><a href="#about">Giới thiệu</a></li>
     <li><a href="#expertise">Chuyên môn</a></li>
+    <li><a href="#portfolio">Dự án</a></li>
     <li><a href="#experience">Kinh nghiệm</a></li>
-    <li><a href="#education">Học vấn</a></li>
     <li><a href="#contact">Liên hệ</a></li>
   </ul>
 </nav>
 
-<!-- Header -->
+<!-- Hero Banner -->
 <header>
   <h1>LÊ THỊ DIỆU XUÂN</h1>
   <h2>Chuyên viên Trồng trọt & Bảo vệ thực vật</h2>
-  <p>Theo đuổi khoa học, đồng hành cùng nông dân.</p>
-  <div class="contact">
-    <a href="mailto:dieuxuanlesrppc@gmail.com">📧 Email</a>
-    <a href="tel:0907525758">📞 Điện thoại</a>
-  </div>
+  <a href="#contact" class="btn-contact">Liên hệ ngay</a>
 </header>
 
 <!-- About Me -->
@@ -100,8 +114,8 @@
   <div class="container about-content">
     <img src="https://via.placeholder.com/250x250.png?text=Ảnh+Chân+Dung" alt="Lê Thị Diệu Xuân">
     <div class="text">
-      <p>Tôi là chuyên viên trong lĩnh vực trồng trọt và bảo vệ thực vật, hiện đang công tác tại Trung tâm Trồng trọt và Bảo vệ thực vật phía Nam. Tôi gắn bó với công tác giám sát, dự báo sâu bệnh hại trên cây trồng và chuyển giao các tiến bộ kỹ thuật đến nông dân. Tôi hướng đến việc áp dụng các giải pháp khoa học phù hợp với thực tiễn sản xuất, góp phần nâng cao hiệu quả canh tác và xây dựng nền nông nghiệp an toàn, bền vững.</p>
-      <p>Gắn bó với nông nghiệp từ thực tiễn sản xuất, tôi lựa chọn công việc trong lĩnh vực trồng trọt và bảo vệ thực vật như một hành trình lâu dài nhằm đóng góp thiết thực cho người nông dân và sự phát triển bền vững của ngành nông nghiệp.</p>
+      <p>Tôi là chuyên viên trong lĩnh vực trồng trọt và bảo vệ thực vật, hiện đang công tác tại Trung tâm Trồng trọt và Bảo vệ thực vật phía Nam. Tôi gắn bó với công tác giám sát, dự báo sâu bệnh hại trên cây trồng và chuyển giao các tiến bộ kỹ thuật đến nông dân.</p>
+      <p>Tôi hướng đến việc áp dụng các giải pháp khoa học phù hợp với thực tiễn sản xuất, góp phần nâng cao hiệu quả canh tác và xây dựng nền nông nghiệp an toàn, bền vững.</p>
     </div>
   </div>
 </section>
@@ -118,6 +132,17 @@
   </div>
 </section>
 
+<!-- Portfolio -->
+<section id="portfolio">
+  <h2>Dự án tiêu biểu</h2>
+  <div class="container portfolio">
+    <img src="https://via.placeholder.com/400x250.png?text=Dự+án+1" alt="Dự án 1">
+    <img src="https://via.placeholder.com/400x250.png?text=Dự+án+2" alt="Dự án 2">
+    <img src="https://via.placeholder.com/400x250.png?text=Dự+án+3" alt="Dự án 3">
+    <img src="https://via.placeholder.com/400x250.png?text=Dự+án+4" alt="Dự án 4">
+  </div>
+</section>
+
 <!-- Experience -->
 <section id="experience">
   <h2>Kinh nghiệm công tác</h2>
@@ -130,16 +155,6 @@
       <h3>Chuyên viên – Trung tâm Kiểm dịch thực vật sau nhập khẩu II (TP. Hồ Chí Minh)</h3>
       <p>Phân tích nguy cơ dịch hại, hỗ trợ mở cửa thị trường nông sản, giám định sinh vật gây hại.</p>
     </div>
-  </div>
-</section>
-
-<!-- Education -->
-<section id="education">
-  <h2>Học vấn & Chứng chỉ</h2>
-  <div class="container grid">
-    <div class="card"><h3>Thạc sĩ Trồng trọt</h3><p>Đại học Cần Thơ</p></div>
-    <div class="card"><h3>Cử nhân Nông học</h3><p>Đại học Cần Thơ</p></div>
-    <div class="card"><h3>Văn bằng 2 Ngôn ngữ Anh</h3></div>
   </div>
 </section>
 
