--- a/index.html
+++ b/index.html
@@ -84,10 +84,23 @@
     .card h3 {margin-bottom:15px; color:#4CAF50; display:flex; align-items:center; gap:10px;}
 
     /* Portfolio */
-    .portfolio {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px; opacity:0; transform:translateY(30px); transition:1s;}
-    .portfolio.visible {opacity:1; transform:translateY(0);}
-    .portfolio img {width:100%; border-radius:10px; transition:0.3s;}
-    .portfolio img:hover {transform:scale(1.05);}
+    #portfolio {background:#e8f5e9;}
+    #portfolio .grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px;}
+    #portfolio .card {
+      background:#fff;
+      padding:20px;
+      border-radius:10px;
+      box-shadow:0 2px 8px rgba(0,0,0,0.1);
+      transition:0.3s;
+      opacity:0; transform:translateY(30px);
+    }
+    #portfolio .card:hover {
+      transform:translateY(-5px) scale(1.03);
+      box-shadow:0 4px 12px rgba(0,0,0,0.2);
+    }
+    #portfolio .card.visible {opacity:1; transform:translateY(0);}
+    #portfolio .card h3 {margin-bottom:10px; color:#4CAF50; display:flex; align-items:center; gap:8px;}
+    #portfolio .card p {color:#333;}
 
     /* Timeline */
     .timeline {position:relative; padding-left:30px; opacity:0; transform:translateY(30px); transition:1s;}
@@ -97,7 +110,7 @@
     .timeline-item::before {content:""; position:absolute; left:-7px; top:5px; width:14px; height:14px; background:#4CAF50; border-radius:50%;}
 
     /* Contact */
-    #contact {background:#e8f5e9; text-align:center; opacity:0; transform:translateY(30px); transition:1s;}
+    #contact {background:#f0fdf4; text-align:center; opacity:0; transform:translateY(30px); transition:1s;}
     #contact.visible {opacity:1; transform:translateY(0);}
     #contact a {color:#4CAF50; font-weight:500;}
 
@@ -162,11 +175,23 @@
 <!-- Portfolio -->
 <section id="portfolio">
   <h2><i class="fas fa-project-diagram"></i> Dự án tiêu biểu</h2>
-  <div class="container portfolio">
-    <img src="https://via.placeholder.com/400x250.png?text=Dự+án+1" alt="Dự án 1">
-    <img src="https://via.placeholder.com/400x250.png?text=Dự+án+2" alt="Dự án 2">
-    <img src="https://via.placeholder.com/400x250.png?text=Dự+án+3" alt="Dự án 3">
-    <img src="https://via.placeholder.com/400x250.png?text=Dự+án+4" alt="Dự án 4">
+  <div class="container grid">
+    <div class="card">
+      <h3><i class="fas fa-seedling"></i> Ecological Engineering in Rice Production</h3>
+      <p>Triển khai các mô hình sinh thái trong sản xuất lúa, hướng dẫn nông dân áp dụng kỹ thuật bền vững.</p>
+    </div>
+    <div class="card">
+      <h3><i class="fas fa-apple-alt"></i> APPPC Training Workshop on Fruit Fly Management</h3>
+      <p>Đào tạo kỹ thuật quản lý ruồi đục quả cho cán bộ và nông dân.</p>
+    </div>
+    <div class="card">
+      <h3><i class="fas fa-leaf"></i> IPM & IPHM Training of the Trainers (TOT)</h3>
+      <p>Chương trình đào tạo giảng viên về quản lý dịch hại tổng hợp cho cây trồng.</p>
+    </div>
+    <div class="card">
+      <h3><i class="fas fa-tractor"></i> Dự án LEGATO</h3>
+      <p>Đánh giá rủi ro và cơ hội trong hệ thống lúa tưới tại châu Á, hỗ trợ nông dân tối ưu hóa sản xuất.</p>
+    </div>
   </div>
 </section>
 
@@ -212,10 +237,11 @@
     });
   }, {threshold:0.2});
   
-  document.querySelectorAll('.about-content, .card, .portfolio, .timeline, #contact').forEach(el => {
+  document.querySelectorAll('.about-content, .card, .timeline, #contact').forEach(el => {
     observer.observe(el);
   });
 </script>
 
 </body>
 </html>
+
