--- a/index.html
+++ b/index.html
@@ -6,100 +6,160 @@
   <title>LÊ THỊ DIỆU XUÂN – Website cá nhân</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
+
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/1c5f5f7e32.js" crossorigin="anonymous"></script>
 
   <style>
+    /* Reset & Base */
     * {margin:0; padding:0; box-sizing:border-box;}
-    body {font-family:'Roboto', sans-serif; line-height:1.6; color:#333; scroll-behavior:smooth;}
+    body {font-family:'Roboto', sans-serif; line-height:1.6; color:#333; scroll-behavior:smooth; background:#f9f9f9;}
     a {text-decoration:none; color:inherit;}
-    nav{position:fixed;top:0;left:0;width:100%;background:rgba(255,255,255,0.95);border-bottom:1px solid #ddd;display:flex;justify-content:center;z-index:999;backdrop-filter:blur(5px);}
-    nav ul{display:flex;flex-wrap:wrap;}
-    nav li{margin:0 15px;}
-    nav a{display:block;padding:15px 0;font-weight:500;color:#333;}
-    nav a:hover{color:#4CAF50;}
-    header{background:url('https://images.unsplash.com/photo-1587194346982-f14b1ed1e1f2?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1600') center/cover no-repeat fixed;height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;color:white;text-align:center;text-shadow:2px 2px 6px rgba(0,0,0,0.5);}
-    header h1{font-family:'Montserrat',sans-serif;font-size:3rem;margin-bottom:10px;}
-    header h2{font-size:1.5rem;margin-bottom:20px;font-weight:500;}
-    .btn{background:#FFD700;padding:12px 25px;border-radius:25px;color:#333;font-weight:500;margin:5px;transition:0.3s;}
-    .btn:hover{background:#FFC107;transform:scale(1.05);}
-    section{padding:80px 20px;}
-    section h2{text-align:center;font-family:'Montserrat',sans-serif;font-size:2rem;margin-bottom:40px;color:#4CAF50;}
-    .container{max-width:1000px;margin:0 auto;}
-    .about-content{display:flex;flex-wrap:wrap;align-items:center;gap:30px;}
-    .about-content img{flex:1 1 250px;max-width:250px;border-radius:10px;}
-    .about-content .text{flex:2 1 500px;}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;}
-    .card{background:#fff;padding:20px;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,0.1);transition:0.3s;}
-    .card:hover{transform:translateY(-5px) scale(1.03);box-shadow:0 4px 12px rgba(0,0,0,0.2);}
-    .card h3{margin-bottom:15px;color:#4CAF50;display:flex;align-items:center;gap:10px;}
-    footer{background:#333;color:#fff;text-align:center;padding:40px 20px;}
-    footer a{color:#FFD700;}
-    @media(max-width:768px){.about-content{flex-direction:column;text-align:center;}}
+    h2 {font-family:'Montserrat', sans-serif; color:#2E7D32; margin-bottom:30px; text-align:center;}
+    
+    /* Navigation */
+    nav {position:fixed; top:0; left:0; width:100%; background:rgba(255,255,255,0.95); border-bottom:1px solid #ddd; display:flex; justify-content:center; z-index:999; backdrop-filter: blur(5px);}
+    nav ul {display:flex; flex-wrap:wrap;}
+    nav li {margin:0 15px;}
+    nav a {display:block; padding:15px 0; font-weight:500; color:#333;}
+    nav a:hover {color:#2E7D32;}
+
+    /* Hero Banner */
+    header {background:url('https://images.unsplash.com/photo-1587194346982-f14b1ed1e1f2?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1600') center/cover no-repeat fixed; height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; color:white; text-align:center; text-shadow:2px 2px 6px rgba(0,0,0,0.5);}
+    header h1 {font-family:'Montserrat', sans-serif; font-size:3rem; margin-bottom:10px;}
+    header h2 {font-size:1.5rem; margin-bottom:20px; font-weight:500;}
+    .btn {background:#FFD700; padding:12px 25px; border-radius:25px; color:#333; font-weight:500; margin:5px; transition:0.3s;}
+    .btn:hover {background:#FFC107; transform:scale(1.05);}
+
+    /* Sections */
+    section {padding:100px 20px;}
+    .container {max-width:1000px; margin:0 auto;}
+
+    /* About */
+    .about-content {display:flex; flex-wrap:wrap; align-items:center; gap:30px;}
+    .about-content img {flex:1 1 250px; max-width:250px; border-radius:10px;}
+    .about-content .text {flex:2 1 500px;}
+
+    /* Grid Cards */
+    .grid {display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px;}
+    .card {background:#fff; padding:20px; border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.1); transition:0.3s;}
+    .card:hover {transform:translateY(-5px) scale(1.03); box-shadow:0 4px 12px rgba(0,0,0,0.2);}
+    .card h3 {margin-bottom:15px; color:#2E7D32; display:flex; align-items:center; gap:10px;}
+    .card p {color:#333;}
+
+    /* Timeline / Experience */
+    .timeline {position:relative; padding-left:30px; border-left:2px solid #2E7D32;}
+    .timeline-item {position:relative; margin-bottom:40px; padding-left:20px;}
+    .timeline-item::before {content:""; position:absolute; left:-9px; top:5px; width:18px; height:18px; background:#2E7D32; border-radius:50%; border:3px solid #fff;}
+
+    /* Contact */
+    #contact {background:#e8f5e9; text-align:center; border-radius:10px; padding:60px 20px;}
+    #contact a {color:#2E7D32; font-weight:500;}
+
+    /* Footer */
+    footer {background:#2E7D32; color:white; text-align:center; padding:40px 20px;}
+    footer a {color:#FFD700;}
+
+    /* Responsive */
+    @media(max-width:768px){
+      .about-content {flex-direction:column; text-align:center;}
+      .about-content img {margin:0 auto;}
+    }
   </style>
 </head>
-
 <body>
 
+<!-- Navigation -->
 <nav>
   <ul>
     <li><a href="#about">Giới thiệu</a></li>
     <li><a href="#expertise">Chuyên môn</a></li>
-    <li><a href="#portfolio">Dự án</a></li>
+    <li><a href="#projects">Dự án</a></li>
     <li><a href="#experience">Kinh nghiệm</a></li>
+    <li><a href="#education">Học vấn</a></li>
     <li><a href="#contact">Liên hệ</a></li>
   </ul>
 </nav>
 
+<!-- Hero Banner -->
 <header>
   <h1><i class="fas fa-seedling"></i> LÊ THỊ DIỆU XUÂN</h1>
   <h2>Chuyên viên Trồng trọt & Bảo vệ thực vật</h2>
   <a href="#contact" class="btn">📩 Liên hệ ngay</a>
-  <a href="CV_Lê_Thị_Diệu_Xuân.pdf" class="btn" target="_blank">⬇️ Tải CV</a>
 </header>
 
+<!-- About Me -->
 <section id="about">
-  <h2><i class="fas fa-user"></i> Giới thiệu</h2>
+  <h2><i class="fas fa-user"></i> Giới thiệu bản thân</h2>
   <div class="container about-content">
-    <img src="https://via.placeholder.com/250" alt="Ảnh chân dung">
+    <img src="https://via.placeholder.com/250x250.png?text=Ảnh+Chân+Dung" alt="Lê Thị Diệu Xuân">
     <div class="text">
-      <p>Tôi là chuyên viên trong lĩnh vực trồng trọt và bảo vệ thực vật, hiện đang công tác tại Trung tâm Trồng trọt và Bảo vệ thực vật phía Nam...</p>
+      <p>Tôi là chuyên viên trong lĩnh vực trồng trọt và bảo vệ thực vật, hiện đang công tác tại Trung tâm Trồng trọt và Bảo vệ thực vật phía Nam. Tôi gắn bó với công tác giám sát, dự báo sâu bệnh hại trên cây trồng và chuyển giao các tiến bộ kỹ thuật đến nông dân. Tôi hướng đến việc áp dụng các giải pháp khoa học phù hợp với thực tiễn sản xuất, góp phần nâng cao hiệu quả canh tác và xây dựng nền nông nghiệp an toàn, bền vững.</p>
     </div>
   </div>
 </section>
 
+<!-- Expertise -->
 <section id="expertise">
   <h2><i class="fas fa-lightbulb"></i> Lĩnh vực chuyên môn</h2>
   <div class="container grid">
     <div class="card"><h3><i class="fas fa-bug"></i> Giám sát & dự báo sâu bệnh</h3><p>Giám sát và dự báo sâu bệnh hại trên cây trồng.</p></div>
+    <div class="card"><h3><i class="fas fa-leaf"></i> Nhận diện sinh vật</h3><p>Nhận diện sâu hại, thiên địch, bệnh hại và cỏ dại.</p></div>
+    <div class="card"><h3><i class="fas fa-chalkboard-teacher"></i> Chuyển giao kỹ thuật</h3><p>Hỗ trợ nông dân áp dụng tiến bộ kỹ thuật.</p></div>
+    <div class="card"><h3><i class="fas fa-shield-alt"></i> Kiểm dịch thực vật</h3><p>Đánh giá nguy cơ sinh vật gây hại, bảo đảm an toàn sinh học.</p></div>
   </div>
 </section>
 
-<section id="portfolio">
-  <h2><i class="fas fa-project-diagram"></i> Dự án tiêu biểu</h2>
+<!-- Projects -->
+<section id="projects">
+  <h2><i class="fas fa-project-diagram"></i> Hoạt động & dự án tiêu biểu</h2>
   <div class="container grid">
-    <div class="card"><h3><i class="fas fa-seedling"></i> Ecological Engineering in Rice Production</h3><p>Triển khai mô hình sinh thái trong sản xuất lúa.</p></div>
+    <div class="card"><h3><i class="fas fa-seedling"></i> Ecological Engineering in Rice Production</h3><p>Triển khai mô hình sinh thái trong sản xuất lúa, hướng dẫn nông dân áp dụng kỹ thuật bền vững.</p></div>
+    <div class="card"><h3><i class="fas fa-apple-alt"></i> APPPC Training Workshop</h3><p>Đào tạo kỹ thuật quản lý ruồi đục quả cho cán bộ và nông dân.</p></div>
+    <div class="card"><h3><i class="fas fa-leaf"></i> IPM & IPHM TOT</h3><p>Đào tạo giảng viên về quản lý dịch hại tổng hợp cho cây trồng.</p></div>
+    <div class="card"><h3><i class="fas fa-tractor"></i> Dự án LEGATO</h3><p>Đánh giá rủi ro và cơ hội trong hệ thống lúa tưới tại châu Á.</p></div>
   </div>
 </section>
 
+<!-- Experience -->
 <section id="experience">
-  <h2><i class="fas fa-briefcase"></i> Kinh nghiệm</h2>
-  <div class="container">
-    <div class="card"><h3>Chuyên viên – Trung tâm Trồng trọt & Bảo vệ thực vật phía Nam (Đồng Tháp)</h3></div>
+  <h2><i class="fas fa-briefcase"></i> Kinh nghiệm công tác</h2>
+  <div class="container timeline">
+    <div class="timeline-item">
+      <h3>Chuyên viên – Trung tâm Trồng trọt và BVTV phía Nam (Đồng Tháp)</h3>
+      <p>Giám sát sản xuất cây trồng, dự báo sâu bệnh hại và hỗ trợ kỹ thuật tại địa phương.</p>
+    </div>
+    <div class="timeline-item">
+      <h3>Chuyên viên – Trung tâm Kiểm dịch thực vật sau nhập khẩu II (TP. Hồ Chí Minh)</h3>
+      <p>Phân tích nguy cơ dịch hại, hỗ trợ mở cửa thị trường nông sản, giám định sinh vật gây hại.</p>
+    </div>
   </div>
 </section>
 
+<!-- Education -->
+<section id="education">
+  <h2><i class="fas fa-graduation-cap"></i> Học vấn & Đào tạo</h2>
+  <div class="container grid">
+    <div class="card"><h3>Thạc sĩ Trồng trọt – Đại học Cần Thơ</h3></div>
+    <div class="card"><h3>Cử nhân Nông học – Đại học Cần Thơ</h3></div>
+    <div class="card"><h3>Văn bằng 2 Ngôn ngữ Anh</h3></div>
+  </div>
+</section>
+
+<!-- Contact -->
 <section id="contact">
   <h2><i class="fas fa-envelope"></i> Liên hệ</h2>
   <div class="container">
-    <p>📧 dieuxuanlesrppc@gmail.com</p>
+    <p>📧 <a href="mailto:dieuxuanlesrppc@gmail.com">dieuxuanlesrppc@gmail.com</a></p>
     <p>📞 0907 525 758</p>
+    <p><em>“Khoa học chỉ thực sự có ý nghĩa khi gắn liền với thực tiễn sản xuất và mang lại lợi ích thiết thực cho người nông dân.”</em></p>
   </div>
 </section>
 
+<!-- Footer -->
 <footer>
-  <p>© 2025 Lê Thị Diệu Xuân | Website cá nhân</p>
+  <p>© 2025 Lê Thị Diệu Xuân | Designed with ❤️ | <a href="#">LinkedIn</a></p>
 </footer>
 
 </body>
