--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
   <script src="https://kit.fontawesome.com/1c5f5f7e32.js" crossorigin="anonymous"></script>
 
   <style>
-    /* Reset & Base */
     * {margin:0; padding:0; box-sizing:border-box;}
     body {font-family:'Roboto', sans-serif; line-height:1.6; color:#333; scroll-behavior:smooth; background:#f9f9f9;}
     a {text-decoration:none; color:inherit;}
     h2 {font-family:'Montserrat', sans-serif; color:#2E7D32; margin-bottom:30px; text-align:center;}
-    
+
     /* Navigation */
     nav {position:fixed; top:0; left:0; width:100%; background:rgba(255,255,255,0.95); border-bottom:1px solid #ddd; display:flex; justify-content:center; z-index:999; backdrop-filter: blur(5px);}
     nav ul {display:flex; flex-wrap:wrap;}
@@ -75,6 +74,7 @@
   <ul>
     <li><a href="#about">Giới thiệu</a></li>
     <li><a href="#expertise">Chuyên môn</a></li>
+    <li><a href="#soil-health">Sức khỏe đất</a></li>
     <li><a href="#projects">Dự án</a></li>
     <li><a href="#experience">Kinh nghiệm</a></li>
     <li><a href="#education">Học vấn</a></li>
@@ -111,11 +111,21 @@
   </div>
 </section>
 
+<!-- Soil Health -->
+<section id="soil-health">
+  <h2><i class="fas fa-leaf"></i> Sức khỏe đất</h2>
+  <div class="container grid">
+    <div class="card"><h3><i class="fas fa-seedling"></i> Giám sát đất</h3><p>Đảm bảo độ phì nhiêu, cấu trúc và hệ vi sinh vật cân bằng để cây trồng phát triển bền vững.</p></div>
+    <div class="card"><h3><i class="fas fa-wind"></i> Cải tạo đất</h3><p>Áp dụng phân hữu cơ, luân canh và phủ xanh để tăng cường sức khỏe đất.</p></div>
+    <div class="card"><h3><i class="fas fa-water"></i> Ứng dụng khoa học</h3><p>Sử dụng kỹ thuật và kết quả nghiên cứu duy trì đất nông nghiệp khỏe mạnh.</p></div>
+  </div>
+</section>
+
 <!-- Projects -->
 <section id="projects">
   <h2><i class="fas fa-project-diagram"></i> Hoạt động & dự án tiêu biểu</h2>
   <div class="container grid">
-    <div class="card"><h3><i class="fas fa-seedling"></i> Ecological Engineering in Rice Production</h3><p>Triển khai mô hình sinh thái trong sản xuất lúa, hướng dẫn nông dân áp dụng kỹ thuật bền vững.</p></div>
+    <div class="card"><h3><i class="fas fa-seedling"></i> Ecological Engineering in Rice Production</h3><p>Triển khai mô hình sinh thái trong sản xuất lúa.</p></div>
     <div class="card"><h3><i class="fas fa-apple-alt"></i> APPPC Training Workshop</h3><p>Đào tạo kỹ thuật quản lý ruồi đục quả cho cán bộ và nông dân.</p></div>
     <div class="card"><h3><i class="fas fa-leaf"></i> IPM & IPHM TOT</h3><p>Đào tạo giảng viên về quản lý dịch hại tổng hợp cho cây trồng.</p></div>
     <div class="card"><h3><i class="fas fa-tractor"></i> Dự án LEGATO</h3><p>Đánh giá rủi ro và cơ hội trong hệ thống lúa tưới tại châu Á.</p></div>
@@ -159,7 +169,7 @@
 
 <!-- Footer -->
 <footer>
-  <p>© 2025 Lê Thị Diệu Xuân | Designed with ❤️ | <a href="#">LinkedIn</a></p>
+  <p>© 2025 Lê Thị Diệu Xuân | Designed with ❤️</p>
 </footer>
 
 </body>
